# Predictive911

./: .gitignore  LICENSE  Pipfile  Procfile  README.md  README.rst  app.py  environment.yml  pyproject.toml  requirements.txt  run.py
Predictive911-Model/notebooks/: EDA.ipynb  Wrangling-and-Feature-Engineering.ipynb  scatter.plotly  temp-plot.html
Predictive911-Model/src/nb_utils/: __init__.py
arc/Detroit-911-Calls-Dash-App/: Procfile  run.py
arc/Detroit-911-Calls-Dash-App/assets/raw_csvs/: holidays.csv
arc/Detroit-911-Calls-Dash-App/notebooks/: Detroit_911_Calls_EDA_FeatureEngineering.ipynb
arc/predictive-911/: run.py
arc/predictive-911/assets/raw-csvs/: scatter_data.csv
arc/predictive-911/pages/: predictions.py
assets/: model.joblib
assets/raw-csvs/: pred_template.csv  testy.csv
assets/raw_csvs/: detroit_weather_wrangled.csv
data/01-raw/: raw_data.sh
nb_utils/: dt_wrangler.py
notebooks/: Detroit_911_Calls_EDA_FeatureEngineering.ipynb  EDA.ipynb  Untitled.ipynb  Wrangling-and-Feature-Engineering.ipynb  detroit-weather.ipynb  holidays.ipynb  initial_cleaning_filtering.ipynb  model_and_predictions.ipynb  scatter_vis_data.ipynb  scratchpad.ipynb
notebooks/.ipynb_checkpoints/: initial_cleaning_filtering-checkpoint.ipynb
pages/: index.py  predictions.py  process.py
src/: run.py
src/app/: __init__.py
src/app/dashboard/: __init__.py
src/app/server/: __init__.py
