[tool.poetry]
name = "predictive911"
version = "0.1.0"
description = ""
authors = ["BrianThomasRoss <ML@BrianThomasRoss.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6.9"
dash = "^1.11.0"
dash-core-components = "^1.9.1"
dash-html-components = "^1.0.3"
dash-bootstrap-components = "^0.9.2"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.1"
flask-migrate = "^2.5.3"

[tool.poetry.dev-dependencies]
ipykernel = "^5.2.1"
jupytext = "^1.4.2"
black = "^19.10b0"
pytest = "^5.4.1"
pycco = "^0.6.0"
pandas = "^1.0.3"
seaborn = "^0.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
